--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
+
 }
 
 android {
@@ -41,6 +43,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.android.material:material:1.7.0-alpha01'
 
+    //material design
+    implementation 'com.google.android.material:material:1.6.0'
+
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
 
@@ -55,4 +60,10 @@ dependencies {
     //room database
     implementation 'androidx.room:room-runtime:2.4.2'
     kapt 'androidx.room:room-compiler:2.4.2'
+    implementation 'androidx.room:room-ktx:2.2.1'
+
+
+    //coroutines core
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+
 }
